Add full reader, add validation, add free memory(50%), add BFS, add queue linked list, some optimizations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,8 @@ add_executable(lem_in
         src/hashmap.c
         src/free_data.c
         src/validation.c
+        src/queue.c
+        src/bfs.c
         libft/src/get_next_line.c
         )
 
