Add useless links remove, add dead links remove, freed 100% no leaks, optimize code, add printing info

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,9 @@ add_executable(lem_in
         src/validation.c
         src/queue.c
         src/bfs.c
+        src/link_optimization.c
+        src/printing.c
+        src/free_data2.c
         libft/src/get_next_line.c
         )
 
